samples/_failures_safe/1761433036_c06e7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_942a832d.c: In function ‘main’:
./samples/SAFE/__tmp_942a832d.c:141:12: error: missing terminating " character
  141 |     printf("ERROR entries: %d\n
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_942a832d.c:141:5: error: expected expression at end of input
  141 |     printf("ERROR entries: %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_942a832d.c:141:5: error: expected declaration or statement at end of input
